# android-accessory-protocol-bridge

./: .gitignore  README.md
Accessory/: aap-bridge_1.0.bb  cross compiling using openembedded.txt  dependencies.txt  libandroidaccessory_1.0.bb
Accessory/AAP-Bridge/: .autotools  .cproject  .project  AAP-Bridge.MediaRemote.config  AAP-Bridge.sounds.config  Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.ac
Accessory/AAP-Bridge/bStrLib/: bstraux.c
Accessory/AAP-Bridge/doc/: AAP-Bridge.md
Accessory/AAP-Bridge/src/: AAP.c  BridgeService.h  accessoryAudio.c  accessoryAudio.h  bridge.c  bulkTransfer.c  bulkTransfer.h  flags.c  flags.h  keepalive.c  keepalive.h  main.c  server.c  server.h  servicespawner.c  servicespawner.h
Accessory/AAP-Bridge/src/Dbus/: dbuslib.c  dbuslib.h  listener.c  listener.h  method.c  method.h
Accessory/AAP-Bridge/src/Message/: AccessoryMessage.h  handlemessage.c  handlemessage.h  receivequeue.c  receivequeue.h  sendqueue.c  sendqueue.h
Accessory/AndroidAccessory/: .autotools  .cproject  .project  AUTHORS  Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.ac  libandroidaccessory.pc.in
Accessory/AndroidAccessory/doc/: Doxyfile.in  Makefile.am  echo.c  example.c
Accessory/AndroidAccessory/include/: accessory.h  usb.h
Accessory/AndroidAccessory/src/: accessory.c  accessory.h  bt.c  bt.h  config.h  initialize.c  initialize.h  usb.c  usb.h
Accessory/Payloads/: UnitTest.py  sensors.py  signalWatcher.py  testStub.py
Android/AAPbridge/: build.gradle
Android/D-Finger/: .project  AndroidManifest.xml  project.properties
Android/D-Finger/app/: build.gradle
Android/D-Finger/app/src/main/: AndroidManifest.xml
Android/D-Finger/app/src/main/res/layout/: activity_bus_name_list.xml  activity_object_path_list.xml  activity_object_path_list_row.xml
Android/D-Finger/app/src/main/res/values/: strings.xml
Android/D-Finger/res/layout/: busnamelistactivity.xml  busnamelistactivity_row.xml
Android/D-Finger/src/nl/ict/dfinger/: BusNameListActivity.java  BusnameAdapter.java  ObjectPathAdapter.java  ObjectPathListActivity.java
Android/MediaRemote/: .project  AndroidManifest.xml  settings.gradle
Android/MediaRemote/app/: build.gradle
Android/MediaRemote/app/src/main/: AndroidManifest.xml
Android/MediaRemote/app/src/main/res/layout/: activity_main.xml
Android/MediaRemote/app/src/main/res/xml/: accessory_filter.xml
Android/MediaRemote/res/layout/: activity_connector.xml
Android/MediaRemote/res/values/: strings.xml
Android/MediaRemote/res/xml/: accessory_filter.xml
Android/MediaRemote/src/nl/ict/MediaRemote/: BluetoothAccessoryActivity.java  MainActivity.java
Android/Remote Dbus/: .classpath  .project  AndroidManifest.xml  project.properties
Android/Remote Dbus/res/layout/: activity_bulk.xml  activity_connector.xml  activity_main.xml  activity_signal_filter.xml  call_remote_function.xml
Android/Remote Dbus/res/values/: strings.xml
Android/Remote Dbus/res/xml/: accessory_filter.xml
Android/Remote Dbus/src/nl/ict/aapbridgesample/: AccessoryActionActivity.java  BluetoothAccessoryActivity.java  BulkActivity.java  CallRemoteFunctionActivity.java  DbusMethodsActivity.java  DbusSignalActivity.java  PairedBtListActivity.java  ServiceSelectionActivity.java  SignalFilterActivity.java
Android/RemoteDBus/app/: build.gradle  proguard-rules.pro
Android/RemoteDBus/app/src/main/: AndroidManifest.xml
Android/RemoteDBus/app/src/main/res/layout/: activity_bulk.xml  call_remote_function.xml
Android/RemoteDBus/app/src/main/res/values/: strings.xml
Android/UnitTestlibAAB/: .project  AndroidManifest.xml  project.properties
Android/UnitTestlibAAB/app/: build.gradle
Android/UnitTestlibAAB/app/src/main/: AndroidManifest.xml
Android/UnitTestlibAAB/app/src/main/res/values/: strings.xml
Android/UnitTestlibAAB/res/values/: strings.xml
Android/UnitTestlibAAB/src/nl/ict/aapbridge/bulk/: BulkTransferTest.java
Android/UnitTestlibAAB/src/nl/ict/aapbridge/dbus/: DbusMethodTest.java  DbusSignalTest.java  DbusTest.java  IntroSpectorTest.java  package-info.java
Android/UnitTestlibAAB/src/nl/ict/aapbridge/test/: BridgeFactoryService.java  TAG.java  UsbConnectorService.java  package-info.java
Android/UnitTestlibAAB/src/org/freedesktop/DBus/Python/: TypeError.java
Android/WeatherCapeReader/: .classpath  .project  AndroidManifest.xml
Android/WeatherCapeReader/app/: build.gradle
Android/WeatherCapeReader/app/src/main/: AndroidManifest.xml
Android/WeatherCapeReader/res/layout/: activity_main.xml
Android/WeatherCapeReader/res/values/: strings.xml
Android/WeatherCapeReader/src/nl/ict/weathercapereader/: MainActivity.java
Android/libAndroidAccessoryBridge/: .project  AndroidManifest.xml  overview.html
Android/libAndroidAccessoryBridge/res/values/: strings.xml
Android/libAndroidAccessoryBridge/src/nl/ict/aapbridge/: SystemHolder.java  TAG.java
Android/libAndroidAccessoryBridge/src/nl/ict/aapbridge/aap/: AccessoryConnection.java  BTConnection.java  UsbConnection.java  package-info.java
Android/libAndroidAccessoryBridge/src/nl/ict/aapbridge/bridge/: AccessoryBridge.java  AccessoryMessage.java  Config.java  Keepalive.java  MessageHandler.java  ServiceRequestException.java  ServiceSpawner.java  package-info.java
Android/libAndroidAccessoryBridge/src/nl/ict/aapbridge/bulk/: BulkTransfer.java
Android/libAndroidAccessoryBridge/src/nl/ict/aapbridge/dbus/: Dbus.java  DbusException.java  DbusHandler.java  DbusMethods.java  DbusSignals.java  IntroSpector.java  Method.java  PayloadException.java  RemoteDbusException.java  RemoteException.java  RemotePayloadException.java  dbus.java  package-info.java
Android/libAndroidAccessoryBridge/src/nl/ict/aapbridge/helper/: ByteHelper.java  ExtByteArrayOutputStream.java  IntegerHelper.java
Android/libAndroidAccessoryBridge/src/org/freedesktop/DBus/Error/: AccessDenied.java  MatchRuleInvalid.java  NoReply.java  ServiceUnknown.java  UnknownMethod.java  UnknownObject.java
doc/: Protocol specification.odt
(+56 files in other folders)
